feat: enhance cars listing endpoint to support other params
