# src/routes/cars.routes.ts
@@ -1,9 +1,9 @@
 import { Router } from 'express';
 
-import { createCarController, listAvailableCarsController } from '@/cars/useCases';
+import { createCarController, listCarsController } from '@/cars/useCases';
 import { ensureAdmin, ensureAuth } from '~/middlewares';
 
 export const carsRoutes = Router();
 
-carsRoutes.get('/cars/available', listAvailableCarsController.handle);
+carsRoutes.get('/cars', listCarsController.handle);
 carsRoutes.post('/cars', ensureAuth(), ensureAdmin(), createCarController.handle);
